cambio area maestros en INICIO

--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -122,6 +122,7 @@
               }
               .inicio-derecha{
                   width: 100%;
+                  height: 350px;
                   margin-left: 0;
                   .notificaciones{
                       height: auto;
