--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@
         width: 100%; }
       .inicio-container .inicio-body .section-inicio .inicio-derecha {
         width: 100%;
+        height: 350px;
         margin-left: 0; }
         .inicio-container .inicio-body .section-inicio .inicio-derecha .notificaciones {
           height: auto;
