--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -122,11 +122,13 @@
               }
               .inicio-derecha{
                   width: 100%;
-                  height: 350px;
                   margin-left: 0;
                   .notificaciones{
                       height: auto;
                       padding: 10px;
+                  }
+                  .mis-docentes{
+                      height: auto;
                   }
               }
           }
