--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: auto; } }
+        height: 550px; } }
 
 header {
   display: flex;
