--- a/scss/partials/_mensajes.scss
+++ b/scss/partials/_mensajes.scss
@@ -88,7 +88,7 @@ footer{
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    height: auto;
+                    height: 550px;
                 }
             }
             
